CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(lancedb)

SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/build/linux-x86_64)

## Build libs
FILE(GLOB_RECURSE SOURCES src/*.cpp src/*.c)
ADD_LIBRARY(lancedb STATIC ${SOURCES})
TARGET_LINK_LIBRARIES(lancedb lancedb_c pthread dl)

## Build samples
FILE(GLOB_RECURSE SAMPLE_SRCS samples/*.cpp)
FOREACH (SAMPLE_SRC ${SAMPLE_SRCS})
    GET_FILENAME_COMPONENT(SAMPLE_NAME ${SAMPLE_SRC} NAME_WE)
    ADD_EXECUTABLE(${SAMPLE_NAME} ${SAMPLE_SRC})
    TARGET_LINK_LIBRARIES(${SAMPLE_NAME} lancedb)
ENDFOREACH ()

## Unit tests
FILE(GLOB_RECURSE TEST_SRCS ${CMAKE_SOURCE_DIR}/test/*.cpp)

add_subdirectory(third_party/gtest)

ADD_EXECUTABLE(test_lancedb ${TEST_SRCS})
TARGET_INCLUDE_DIRECTORIES(test_lancedb PRIVATE ${THIRD_PARTY_DIR}/gtest/googletest/include)
TARGET_INCLUDE_DIRECTORIES(test_lancedb PRIVATE ${THIRD_PARTY_DIR}/gtest/googlemock/include)
TARGET_LINK_LIBRARIES(test_lancedb lancedb gtest_main)